--- a/distribution/DBManager-1/index.html
+++ b/distribution/DBManager-1/index.html
@@ -2,7 +2,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
-<title>DB Manager</title>
+<title>DB Manager for Processing</title>
 <meta name="description"
 	content="A tool for the Processing programming environment" />
 <meta name="keywords" content="processing.org, tool, Utility,DB,Data,GUI" />
@@ -21,7 +21,7 @@
 	<div id="container">
 
 		<div id="header">
-			<h1>DB Manager</h1>
+			<h1>DB Manager for Processing</h1>
 		</div>
 
 		<div id="menu" class="clear">
@@ -40,14 +40,14 @@
 		<div id="content" class="clear">
 
 			<div id="about">
-				<h2>DB Manager</h2>
+				<h2>DB Manager for Processing</h2>
 				<p>
-					A tool by <a href="http://vesolba.esmiweb.es">Venerando Solis Barrado</a> for the <a
+					A tool by <a href="https://github.com/vesolba">Venerando Solis Barrado</a> for the <a
 						href="http://www.processing.org" target="_blank">Processing</a>
-					programming environment.<br> Last update, 04/04/2017. 
+					programming environment.<br> Last update, 06/18/2017. 
 				</p>
 				<p>
-					Tool to manage a Java DB (aka Derby) server in mode "embedded server".<br> Java stuff over Java DB. It must work in any platform (not tested). <br> Feel free to
+					To manage a Java DB (aka Derby) server from Processing.<br> Tested only on Windows 10. <br> Feel free to
 							replace this paragraph with a description of the tool.<br>
 								Contributed libraries are developed, documented, and maintained
 								by members of the Processing community. Further directions are
@@ -62,7 +62,7 @@
 			<div id="download" class="clear">
 				<h2>Download</h2>
 				<p>
-					Download DB Manager version 1.0.0
+					Download DB Manager for Processing version 1.0.0
 					(1) in <a
 						href="./download/DBManager-1.zip">.zip
 						format</a>.
@@ -84,7 +84,7 @@
 					the reference is included in the .zip as well.
 				</p>
 				<p>
-					<strong>Source</strong>. The source code of DB Manager is
+					<strong>Source</strong>. The source code of DB Manager for Processing is
 					available at <a href="https://github.com/vesolba/DBManager-for-Processing">GitHub</a>, and its
 					repository can be browsed <a href="https://github.com/vesolba/DBManager-for-Processing.git"
 						target="_blank">here</a>.
@@ -95,7 +95,7 @@
 			<div id="examples" class="clear">
 				<h2>Examples</h2>
 				<p>Find a list of examples in the current distribution of
-					DB Manager, or have a look at them by following the links below.</p>
+					DB Manager for Processing, or have a look at them by following the links below.</p>
 				<ul>
 				</ul>
 			</div>
